@@ -1118,24 +1118,6 @@ argument_list|,
 name|shard
 argument_list|)
 decl_stmt|;
-if|if
-condition|(
-name|Strings
-operator|.
-name|isNullOrEmpty
-argument_list|(
-name|shard
-argument_list|)
-condition|)
-name|System
-operator|.
-name|out
-operator|.
-name|println
-argument_list|(
-literal|"Empty shard!"
-argument_list|)
-expr_stmt|;
 name|Callable
 argument_list|<
 name|ShardResponse
