@@ -126,6 +126,8 @@ Other Changes
 * SOLR-7381: Improve logging by adding node name in MDC in SolrCloud mode and adding MDC to
   all thread pools. (shalin)
 
+* SOLR-7384: Fix spurious failures in FullSolrCloudDistribCmdsTest. (shalin)
+
 ==================  5.1.0 ==================
 
 Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release
